--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
             <article class="showcase-list container container-center ">
                 <h1>minionese</h1>
             
-            <p>Details:Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language.
+            <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language.
 
             </p>
 
@@ -83,7 +83,7 @@
             
             <p>It contains details of my projects</p>
 
-            <a class="link link-primary" href="https://vyanktesh-portfolio.netlify.app/">Live Project</a>
+            <a class="link link-primary" href=" https://vyankteshportfolio.netlify.app/">Live Project</a>
             <a class="link link-secondary" href="https://github.com/VyankteshVyas/MyPortfolio">View Source</a>
 
             </article>
