--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <li class="list-item-inline">
                 <a class="link" href="/projects.html">Projects</a>
             </li>
+            <li class="list-item-inline">
+                <a class="link" href="/blogs.html">Blogs</a>
+            </li>
         </ul>
     </nav>
 
